fix building external projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 2.8)
 #OPTION(ENABLE_OPTIMIZATION      "Enable optimization [default: OFF]"             ON)
 
 include(ExternalProject)
+#link_directories(${CMAKE_BINARY_DIR}/InstalledExternals/lib)
+include_directories(${CMAKE_BINARY_DIR}/InstalledExternals/include)
 
 #if (NOT CMAKE_BUILD_TYPE)
 #set(CMAKE_BUILD_TYPE Debug)
@@ -36,7 +38,7 @@ find_package(Boost 1.58.0 COMPONENTS context)
 if(NOT Boost_FOUND)
   include(cmake/AddExternalBoost.cmake)
 endif()
-include_directories(${Boost_INCLUDE_DIRS})
+#include_directories(${Boost_INCLUDE_DIRS})
 
 #find_package(PkgConfig)
 #pkg_check_modules(TCMALLOC REQUIRED libtcmalloc_minimal)
@@ -51,7 +53,7 @@ set(COMMON_LIBS ${COMMON_LIBS} -ltcmalloc_minimal -latomic)
 #find_package(Qt5Core REQUIRED)
 
 #set(LIBS ${LIBS} -lcrypt -lpthread -luuid -lctpp2 -lssl -lcrypto)
-include_directories(${CMAKE_BINARY_DIR}/InstalledExternals/include)
+#include_directories(${CMAKE_BINARY_DIR}/InstalledExternals/include)
 include(cmake/AddExternalCpuUtils.cmake)
 include(cmake/AddExternalCrashLog.cmake)
 
@@ -72,6 +74,7 @@ add_definitions(-std=c++14 -Wall -pedantic -mtune=native -march=native -pthread)
 #add_definitions(-std=c++14 -Wall -pedantic -mtune=native -march=native -pthread -g -fsanitize=address -fno-omit-frame-pointer)
 
 add_library(alterstack STATIC ${alterstack_SRCS})
+target_link_libraries(alterstack boost_context)
 #target_link_libraries(context ${COMMON_LIBS})
 #target_link_libraries(alterstack ${COMMON_LIBS} ${Boost_LIBRARIES} -pthread)
 #target_link_libraries(cot ${COMMON_LIBS} ${Boost_LIBRARIES} -pthread -g -fsanitize=address)
